# modorganizer-uibase

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  build.ps1  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  linting.yml
cmake/: config.cmake.in
include/uibase/: delayedfilewriter.h  errorcodes.h  eventfilter.h  exceptions.h  executableinfo.h  extension.h  filemapping.h  filesystemutilities.h  finddialog.h  formatters.h  guessedvalue.h  idownloadmanager.h  iexecutable.h  iexecutableslist.h  ifiletree.h  ifiletree_utils.h  iinstallationmanager.h  iinstance.h  iinstancemanager.h  imodinterface.h  imodlist.h  imodrepositorybridge.h  imoinfo.h  iplugin.h  iplugindiagnose.h  ipluginfilemapper.h  iplugingame.h  iplugininstallersimple.h  ipluginlist.h  ipluginloader.h  ipluginmodpage.h  ipluginproxy.h  iplugintool.h  isavegame.h  isavegameinfowidget.h  json.h  lineeditclear.h  linklabel.h  log.h  moassert.h  (+16 more)
include/uibase/extensions/: extension.h  extensionsetting.h  requirements.h  theme.h  translation.h  versionconstraints.h
include/uibase/formatters/: path.h  qt.h  random_access_containers.h
include/uibase/game_features/: dataarchives.h  game_feature.h  gameplugins.h  igamefeatures.h  localsavegames.h  moddatachecker.h  moddatacontent.h  savegameinfo.h  unmanagedmods.h
src/: CMakeLists.txt  delayedfilewriter.cpp  delayedfilewriter.h  diagnosisreport.cpp  diagnosisreport.h  dllimport.h  errorcodes.cpp  errorcodes.h  eventfilter.cpp  eventfilter.h  exceptions.h  executableinfo.cpp  executableinfo.h  expanderwidget.cpp  expanderwidget.h  extension.cpp  extension.h  filemapping.h  filesystemutilities.cpp  filesystemutilities.h  filterwidget.cpp  filterwidget.h  finddialog.cpp  finddialog.h  formatters.h  guessedvalue.cpp  guessedvalue.h  idownloadmanager.h  iextensionlist.h  ifiletree.cpp  ifiletree.h  iinstallationmanager.h  imodinterface.h  imodlist.h  imodrepositorybridge.cpp  imodrepositorybridge.h  imoinfo.cpp  imoinfo.h  installationtester.cpp  installationtester.h  (+81 more)
src/formatters/: enums.h  strings.h
src/game_features/: bsainvalidation.h  dataarchives.h  gameplugins.h  igamefeatures.h  localsavegames.h  moddatachecker.h  moddatacontent.h  savegameinfo.h  scriptextender.h  unmanagedmods.h
tests/: CMakeLists.txt  pch.h  test_extensions.cpp  test_formatters.cpp  test_ifiletree.cpp  test_main.cpp  test_strings.cpp  test_utils.cpp  test_utils.h  test_versioning.cpp
tests/cmake/: CMakeLists.txt  plugin.cpp
tests/data/extensions/mo2-example-extension/: metadata.json
tests/translations/: extract_translations.py  tests_en.qm  tests_en.ts  tests_fr.qm  tests_fr.ts
